Workshops/w2_test/errors.txt
In file included from barbarian.h:4,
                 from tester_1.cpp:15:
characterTpl.h: In instantiation of 'int seneca::CharacterTpl<T>::getHealth() const [with T = seneca::InfiniteHealth]':
characterTpl.h:31:9:   required from here
characterTpl.h:35:29: error: 'const struct seneca::InfiniteHealth' has no member named 'getHealth'
   35 |             return m_health.getHealth();
      |                    ~~~~~~~~~^~~~~~~~~
characterTpl.h: In instantiation of 'void seneca::CharacterTpl<T>::setHealth(int) [with T = seneca::InfiniteHealth]':
characterTpl.h:43:10:   required from here
characterTpl.h:47:22: error: 'struct seneca::InfiniteHealth' has no member named 'setHealth'
   47 |             m_health.setHealth(std::max(0, health));
      |             ~~~~~~~~~^~~~~~~~~
characterTpl.h: In instantiation of 'void seneca::CharacterTpl<T>::setHealthMax(int) [with T = seneca::InfiniteHealth]':
characterTpl.h:57:10:   required from here
characterTpl.h:62:22: error: 'struct seneca::InfiniteHealth' has no member named 'setHealth'
   62 |             m_health.setHealth(health);
      |             ~~~~~~~~~^~~~~~~~~
characterTpl.h: In instantiation of 'int seneca::CharacterTpl<T>::getHealth() const [with T = seneca::SuperHealth]':
characterTpl.h:31:9:   required from here
characterTpl.h:35:29: error: 'const class seneca::SuperHealth' has no member named 'getHealth'; did you mean 'SuperHealth'?
   35 |             return m_health.getHealth();
      |                    ~~~~~~~~~^~~~~~~~~
      |                    SuperHealth
characterTpl.h: In instantiation of 'void seneca::CharacterTpl<T>::setHealth(int) [with T = seneca::SuperHealth]':
characterTpl.h:43:10:   required from here
characterTpl.h:47:22: error: 'class seneca::SuperHealth' has no member named 'setHealth'; did you mean 'SuperHealth'?
   47 |             m_health.setHealth(std::max(0, health));
      |             ~~~~~~~~~^~~~~~~~~
      |             SuperHealth
characterTpl.h: In instantiation of 'void seneca::CharacterTpl<T>::setHealthMax(int) [with T = seneca::SuperHealth]':
characterTpl.h:57:10:   required from here
characterTpl.h:62:22: error: 'class seneca::SuperHealth' has no member named 'setHealth'; did you mean 'SuperHealth'?
   62 |             m_health.setHealth(health);
      |             ~~~~~~~~~^~~~~~~~~
      |             SuperHealth
